feat: add echo intergration
